
=== Improvements

- https://github.com/eclipse-syson/syson/issues/699[#699] [general-view] Add CaseUsage and CaseDefinition in General View diagram.
- https://github.com/eclipse-syson/syson/issues/746[#746] [syson] Update Batmobile template.
- https://github.com/eclipse-syson/syson/issues/717[#717] [import] Handle of aliases and external references have been improved.

=== New features

- https://github.com/eclipse-syson/syson/issues/694[#694] [diagrams] Add a new custom node note among possible node style descriptions.
- https://github.com/eclipse-syson/syson/issues/695[#695] [diagrams] Add Documentation element as graphical node in all diagrams.
- https://github.com/eclipse-syson/syson/issues/731[#731] [explorer] Allow creation of Comment from the Explorer view.
- https://github.com/eclipse-syson/syson/issues/696[#696] [diagrams] Add Comment element as graphical node in all diagrams.
- https://github.com/eclipse-syson/syson/issues/697[#697] [details] Add Comment property to Core tab of the Details view.
- https://github.com/eclipse-syson/syson/issues/740[#740] [export] Fix missing declaredName after exporting an annotating element.
- https://github.com/eclipse-syson/syson/issues/754[#754] [general-view] Add an edge tool to add target element as nested usage.
This complements the existing tool that allows to add the source element as a nested usage of the target.


== v2024.9.0

=== Breaking changes

- https://github.com/eclipse-syson/syson/issues/554[#554] [diagrams] Move _StateTransitionCompartmentNodeDescriptionProvider_ from syson-diagram-statetransition-view to module syson-diagram-common-view.
- https://github.com/eclipse-syson/syson/issues/393[#393] [general-view] Code refactoring:
* Rename `ExhibitStatesCompartmentItemNodeDescriptionProvider` to `StatesCompartmentItemNodeDescriptionProvider`.
* _StatesCompartmentNodeDescriptionProvider_ now handles both exhibit and non-exhibit states.